--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -67,8 +67,7 @@
                                 Machine Learning with R
                                 <br>
                                 <br>
-                                Displaying a Machine 
-                                Learning project in R.
+                                Displaying a Machine Learning project in R.
                             </div>
                         </div>
                     </div>
