Updating the portfolio content and links.

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -56,18 +56,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Basic-Machine-Learning-in-R-side-project" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="Machine Learning with R">
+                <a href="https://github.com/micgonzalez/Stout-Global-Investments-Case-Studies" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="Stout Global Investments">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Machine Learning with R
+                                Stout Global Investments' Case Studies
                                 <br>
                                 <br>
-                                Displaying a Machine Learning project in R.
+                                Analyzing the data and creating new reports.
                             </div>
                         </div>
                     </div>
@@ -92,18 +92,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/MySQL-Database-Visualizations" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/6_new.jpg" class="img-responsive" alt="MySQL Database Visualizations">
+                <a href="https://github.com/micgonzalez/Showcase-of-SQL-Projects" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/6_new.jpg" class="img-responsive" alt="Showcase of SQL Projects">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                MySQL Database Visualizations
+                                Showcase of SQL Projects
                                 <br>
                                 <br>
-                                 Pulling data from a remote database to create visualizations.
+                                 Showcase of projects which, includes MySQL databases.
                             </div>
                         </div>
                     </div>
