Updated the description of one project.

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -13,7 +13,7 @@
                                 Automated Labeling Tool 
                                 <br>
                                 <br>
-                                Created this tool for my Disney Role.
+                                Created this python tool for my Disney job.
                             </div>
                         </div>
                     </div>
