--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -20,18 +20,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Data-Modeling-in-Excel" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/2_new.jpg" class="img-responsive" alt="Data Modeling with two Pivot Charts">
+                <a href="https://github.com/micgonzalez/Disneyland-Resort-Reviews-Report" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/2_new.jpg" class="img-responsive" alt="Disneyland Resort Reviews Report">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Data modeling in Excel
+                                Disneyland Resort Reviews Report
                                 <br>
                                 <br>
-                                Displaying data modeling with two pivot charts.
+                                Weekly Report for Disneyland Resort.
                             </div>
                         </div>
                     </div>
@@ -56,18 +56,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Stout-Global-Investments-Case-Studies" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="Stout Global Investments">
+                <a href="https://github.com/micgonzalez/Holidays-at-DLR-2022-ARR" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="Holidays at DLR 2022 ARR">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Stout Global Investments' Case Studies
+                                Holidays at DLR 2022 ARR
                                 <br>
                                 <br>
-                                Analyzing the data and creating new reports.
+                                After-Action Report of Holidays at DLR.
                             </div>
                         </div>
                     </div>
@@ -92,18 +92,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Showcase-of-SQL-Projects" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/6_new.jpg" class="img-responsive" alt="Showcase of SQL Projects">
+                <a href="https://github.com/micgonzalez/MySQL-Soccer-Players-Stats-Database" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/6_new.jpg" class="img-responsive" alt="MySQL Soccer Players Stats Database">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Showcase of SQL Projects
+                                MySQL Soccer Database
                                 <br>
                                 <br>
-                                 Showcase of projects which, includes MySQL databases.
+                                 Pulling data from a remote MySQL database.
                             </div>
                         </div>
                     </div>
