--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -74,18 +74,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/lucky-parking/tree/reddit-analysis/notebooks" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/5_new.jpg" class="img-responsive" alt="Lucky Parking's Reddit Text Analysis">
+                <a href="https://micgonzalez.github.io/cryptocurrency_data_analysis.html" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/5_new.jpg" class="img-responsive" alt="Data Analysis with Javascript">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Lucky Parking's Reddit Text Analysis
+                                Data Analysis with Javascript
                                 <br>
                                 <br>
-                                Looking for insights from Reddit posts.
+                                Looking for insights from CoinGecko Exchange.
                             </div>
                         </div>
                     </div>
