Updating portfolio.html

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -74,18 +74,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://micgonzalez.github.io/cryptocurrency_data_analysis.html" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/5_new.jpg" class="img-responsive" alt="Data Analysis with Javascript">
+                <a href="https://github.com/micgonzalez/Comment-Trends-Dashboard" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/5_new.jpg" class="img-responsive" alt="Interactive Excel Dashboard">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Data Analysis with Javascript
+                                Interactive Excel Dashboard
                                 <br>
                                 <br>
-                                Looking for insights from CoinGecko Exchange.
+                                Dashboard with insights from Tripadvisor's data on Disneyland.
                             </div>
                         </div>
                     </div>
