Update portfolio.html with new project

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -56,18 +56,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Holidays-at-DLR-2022-ARR" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="Holidays at DLR 2022 ARR">
+                <a href="https://github.com/micgonzalez/2023-Disneyland-Resort-Canoe-Races-AAR" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/4_new.jpg" class="img-responsive" alt="2023 Disneyland Canoe Races">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Holidays at DLR 2022 ARR
+                                2023 Disneyland Canoe Races
                                 <br>
                                 <br>
-                                After-Action Report of Holidays at DLR.
+                                After-Action Report of Disneyland Canoe Races.
                             </div>
                         </div>
                     </div>
