--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -38,18 +38,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://public.tableau.com/app/profile/michael.gonzalez8104" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/3_new.jpg" class="img-responsive" alt="Profile of Tableau Projects">
+                <a href="https://github.com/micgonzalez/Data-Science-for-All-Retail-Challenge" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/3_new.jpg" class="img-responsive" alt="Data Science for All Retail Challenge">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Professional
+                                Skill Development
                             </div>
                             <div class="project-name">
-                                Profile of Tableau Projects
+                                Data Science for All/Correlation One
                                 <br>
                                 <br>
-                                Displaying public profile of Tableau projects.
+                                Retail Challenge: Consumer Analysis Presentaton.
                             </div>
                         </div>
                     </div>
