--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -46,10 +46,10 @@
                                 Skill Development
                             </div>
                             <div class="project-name">
-                                Data Science for All/Correlation One
+                                Data Science for All/Correlation One Cohort
                                 <br>
                                 <br>
-                                Retail Challenge: Consumer Analysis Presentaton.
+                                Retail Challenge: Consumer Analysis Presentation.
                             </div>
                         </div>
                     </div>
