--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -6,7 +6,7 @@
                 <hr class="light">
                 <p class="text-faded-about"><img src="https://avatars0.githubusercontent.com/u/47374721?s=460&u=2305234a402a106bcd2374612f21676205af1ed4&v=4" alt="Michael Gonzalez" style="float:left;width:200px;height:200px;" hspace="15">
                     Thanks for visiting my portfolio! &nbsp My professional background has been in Graphic Design and Front-End development. I have always been interested in creating visualizations that can convey
-                    messages to people from different backgrounds. With my new focus on data science, utilizing my gained skills to create works that can be used as part of great storytelling.</p>
+                    messages to people from different backgrounds. Utilizing my unique background to create works that can be used as part of great storytelling.</p>
                 <!--<a href="#" class="btn btn-default btn-xl">Get Started!</a>and I am excited to gain more expereince in this career field.-->
             </div>
         </div>
