--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -46,7 +46,7 @@
                                 Skill Development
                             </div>
                             <div class="project-name">
-                                Data Science for All/Correlation One Cohort
+                                Data Science for All/Correlation One
                                 <br>
                                 <br>
                                 Retail Challenge: Consumer Analysis Presentation.
