--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -74,18 +74,18 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/micgonzalez/Comment-Trends-Dashboard" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/5_new.jpg" class="img-responsive" alt="Interactive Excel Dashboard">
+                <a href="https://medium.com/@ds.mpg.portfolio/what-was-the-reason-for-team-usas-slow-progress-for-gold-606bac238234" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/5_new.jpg" class="img-responsive" alt="Team USA's Medals Count Analysis">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Professional
                             </div>
                             <div class="project-name">
-                                Interactive Excel Dashboard
+                                Team USA's Medals Count Analysis
                                 <br>
                                 <br>
-                                Dashboard with insights from Tripadvisor's data on Disneyland.
+                                Why Team USA had a slow accumulation of Gold Medals? 
                             </div>
                         </div>
                     </div>
